@@ -26,6 +26,7 @@ version 2.1.3.12
 - some things that use the same sprites have been changed to have their editor preview to use a different frame (demon/spectre for example)
 - thing graphics are now square by default because the collision boxes in Doom engine games are actually square
 - handle bad plugins more gracefully (hopefully)
+- some ui buttons will have the hotkey shown in the tooltip now
 
 version 2.1.3.10
 =====================
